extend payment methods hashmap to have direct debit